# stock-forecast

./: .gitignore  AI_README.md  README.md  app.py  backtesting_results_AAPL_20251004_222305.json  custom_data_path_example.py  example_forecasting.py  example_incremental_update.py  example_standalone_backtesting.py  example_usage.py  pyproject.toml  quick_backtest_example.py  requirements.txt  run_backtest.py  run_forecasting_notebook.py  simple_update_example.py  task.md  test_forecasting_system.py  test_imports.py
.cursor/rules/: stock-forecast-standards.mdc
.github/: PULL_REQUEST_TEMPLATE.md
config/: stocks_config.yaml
data/processed/: .gitkeep
data/raw/: .gitkeep
docs/: LGBM_INFORMATION_LEAKAGE_AUDIT.md
docs/research/: MODEL_ENHANCEMENT_RESEARCH.md
notebooks/: backtesting.ipynb  data_refresh.ipynb  stock_forecasting.ipynb  stock_visualization.ipynb
src/data_preprocess/: __init__.py  data_preprocess_utils.py  stock_data_loader.py
src/feature_engineering/: __init__.py  base.py  daily_volatility_features.py  difference_features.py  fourier_transformer.py  horizon_features.py  intraday_features.py  lag_features.py  macro_features.py  market_features.py  rolling_features.py  technical_indicators.py  time_features.py
src/forecasting/: __init__.py  dynamic_feature_engineer.py  feature_factory.py  feature_importance.py  forecasting_pipeline.py  lgbm_forecaster.py  lgbm_tuner.py  research_features.py  standalone_backtester.py  time_series_backtester.py  trading_simulator.py  trend_seasonality.py  weekly_aggregator.py
src/research/: __init__.py  capital_market_researcher.py  news_report_analyzer.py  research_agent.py
tests/: __init__.py  conftest.py  test_integration.py  test_simulation_chart_consistency.py  test_standalone_backtester_threads.py
(+17 files in other folders)
